--- a/src/Components/Content/Content.css
+++ b/src/Components/Content/Content.css
@@ -9,7 +9,8 @@
     background-repeat: no-repeat;
     width: 100%;
     height: 100dvh;
-   
+
+
     mask: linear-gradient(to right, red 40px,transparent 40px);
     position: relative;
     /* padding-top: 60px; */
@@ -22,8 +23,7 @@
     color: white;
     left:0;
     top:0;
-    background: linear-gradient(transparent,#000a 60% ,#000  90%);
-    
+    background: linear-gradient(#000,#000a,transparent,#000a 60% ,#000  90%);
     height: 100%;
     width: 100%;
     text-align: center;
@@ -49,7 +49,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 800;
     line-height: 2lh;
-    color: #999;
+    color: var(--gray-color);
  
 }
 
