--- a/src/Components/Vehicles/Vehicles.css
+++ b/src/Components/Vehicles/Vehicles.css
@@ -1,3 +1,31 @@
+.vehicles-wrap{
+    padding-top: 100px;
+}
+.input{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-inline: 30px;
+
+}
+.input>input{
+    width: 400px;
+    height: 35px;
+    border-radius: 30px;
+    outline: none;
+    border: none;
+    padding-inline:25px;
+    background-color: #444;
+    box-shadow: 1px 1px 4px #999;
+    color: #a3a3a3;
+    font-size: medium;
+}
+
+.input>input::placeholder{
+    color: #a3a3a3;
+}
+
 .card{
    /* background-color: brown; */
     width: 100%;
@@ -6,7 +34,7 @@
     display: grid;
     grid-template-columns: repeat(3,1fr);
     gap: 40px;
-    padding: 100px 30px;
+    padding:  30px;
 }
 .card>div:has(~ div:hover){
     filter: brightness(.7);
