--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 body {
+  height: auto;
+  width: 100%;
+  overflow: hidden;
+  overflow-y: scroll;
   margin: 0px;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,7 +10,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #050505;
+  /* background: #050505; */
+  background: url("https://images.pexels.com/photos/18372324/pexels-photo-18372324/free-photo-of-dark-grey-abstract-texture.jpeg");
+background-size: contain;
+background-repeat: repeat;
+backdrop-filter: brightness(.2);
 }
 
 code {
