--- a/src/Components/CarDetails/HeroSection.css
+++ b/src/Components/CarDetails/HeroSection.css
@@ -4,7 +4,7 @@
     background-size: cover;   
    
     position: relative;
-
+background-position: center;
 }
 
 .car-name{
@@ -27,16 +27,17 @@
 
  transform: translateX(100px);
  transform-origin: left center;
- animation: reveal .3s ease-in forwards;
+ animation: reveal .3s ease-in  1s forwards;
 }
 
 @keyframes reveal{
     to{
-        transform: translateX(0px);
+        transform: translate(0px);
     }
 }
 
 .car-content{
+
     padding: 100px 35px;
     height: 100%;
     display: flex;
@@ -56,15 +57,84 @@
     gap: 20px;
     align-items: center;
     transform: translateX(-200px);
-    animation: reveal .2s ease-in forwards;
+    animation: reveal .2s ease-in  1s forwards;
+}
+
+
+.car-content>.icon-pack>.svg{
+  font-size: 40px;
 }
 
 .car-content>.icon-pack:nth-child(2){
-    animation-delay: .08s;
+    animation-delay: 1.08s;
 }
 .car-content>.icon-pack:nth-child(3){
-    animation-delay: .16s;
+    animation-delay: 1.16s;
 }
 .car-content>.icon-pack:nth-child(4){
-    animation-delay: .24s;
+    animation-delay: 1.24s;
 }
+
+
+
+
+
+@media (max-width:760px){
+    .hero-section-wrap{
+        height: 70dvh;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center 100px;
+    }  
+
+
+    .car-name{
+      
+        height: auto;
+       
+        bottom: 30%;
+       left:0px;
+       width: 100%;
+       text-transform: uppercase;
+       text-align: center ;
+       padding-inline: 20px; 
+       
+     text-orientation:unset;
+     writing-mode:unset;
+    
+     transform: translateY(-600px);
+     
+    }
+
+    .car-content{
+position: absolute;
+bottom: 10%;
+left: 0;
+        padding: 5px;
+        height: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        font-size: 16px;
+        width: 100%;
+        
+    }
+    
+    .car-content > .icon-pack{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        
+        align-items: center;
+        transform: translateY(600px);
+        
+    }
+
+    .car-content>.icon-pack>.svg{
+        font-size: 20px;
+      }
+      
+
+  }
