--- a/src/Components/ModelListCard/ModelCard.css
+++ b/src/Components/ModelListCard/ModelCard.css
@@ -1,5 +1,5 @@
 .model-card{
-    background:radial-gradient(circle at 50% 50%,#202020,#000);
+    background:radial-gradient(circle at 50% 50%,#999,#777,#333);
     aspect-ratio: 1;
     position: relative;
 }
@@ -7,14 +7,16 @@
 
 
 .model-card::before,.model-card:after{
+   
     position: absolute;
-    top: 0%;
-    left: 0%;
+    top: -2px;
+    left: -2px;
     content: '';
     width: 100%;
     height: 100%;
-    border: 1px solid #999;
-    border-radius: 30px;
+    border: 2px solid #fff;
+    
+
     transition: all .2s linear;
 }
 
@@ -37,7 +39,7 @@
     height: calc(100% + 40px);
     top: -20px;
     border-radius: 0px;
-    border-inline-color: #999;
+    border-inline-color: #fff;
 
 }
 
@@ -46,7 +48,7 @@
     width: calc(100% + 40px);
     left: -20px;
     border-radius: 0px;
-    border-block-color: #999;
+    border-block-color: #fff;
 
 }
 
@@ -121,3 +123,6 @@
     /* background-position: top center; */
     background-size: 300px;
 }
+
+
+
