--- a/src/Components/Vehicles/Vehicles.css
+++ b/src/Components/Vehicles/Vehicles.css
@@ -44,3 +44,17 @@
     filter: brightness(.7);
 
 }
+
+@media (min-width:761px) and (max-width: 1100px){
+    .card{
+        grid-template-columns: 1fr 1fr;
+      }  
+}
+
+
+
+@media (max-width:760px){
+  .card{
+    grid-template-columns: 1fr;
+  }  
+}
