second stage resposivness done

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -16,3 +16,16 @@ li>a:hover{
     color: snow;
     
 }
+
+@media (max-width:760px){
+    .footer{
+        flex-direction: column;
+        display: flex;
+    }
+
+    li,a{
+    
+ display: block;
+ margin-bottom: 10px;   
+    }
+}
