--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,5 +1,4 @@
 /* Navbar styles*/
-
 .navbar {
   width: 100%;
     display: flex;
@@ -50,16 +49,45 @@
     font-size: 25px;
     color: #fff;
   }
+  .hamburger{
+    display: none;
+  }
 
 
+  .menubar{
+    position: fixed;
+    top: 45px;
+    z-index: 1000;
+    background: black;
+    width: 100%;
+  }
 
-@media (max-width:800px){
+@media (max-width:767px){
   .navbar{
-    padding:5px 5px;
+    padding:10px 5px;
+  height: 45px;
+    
   }
   
 
   .logo  {
     font-size: 14px;
   }
+  .hamburger{
+    display: block;
+    
+  }
+
+  .hamburger>rect{
+    fill: white;
+  }
+  .nav-icons{
+    display: none;
+  }
+   
+  .nav-links {
+    display: none;
+  }
+
+
   }
